# AI-Recommendation-System

./: .env.example  .gitignore  Makefile  README.md  deploy.sh  docker-compose.yml  pyproject.toml
backend/: __init__.py  main.py
backend/app/: __init__.py
backend/app/api/: __init__.py
backend/app/api/routes/: health.py  recommend.py
backend/app/core/: application.py
backend/app/middleware/: __init__.py  logging_middleware.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: __init__.py  cache_service.py  recommendation_service.py
backend/tests/: test_api.py
config/: __init__.py  logger.py  settings.py
data/raw/: movies.csv
docker/: Dockerfile.backend  Dockerfile.frontend  requirements.txt  streamlit_app.py  streamlit_config.toml
frontend/: api_client.py  app.py  components.py
model/: __init__.py
model/src/: __init__.py  engine.py  preprocessor.py  recommender.py
model/tests/: __init__.py  test_recommender.py
nginx/: nginx.conf
nginx/conf.d/: locations.conf
requirements/: all.txt  backend.txt  frontend.txt
