[tool.poetry]
name = "ai-recommendation-system"
version = "0.1.0"
description = "Cosine similarity recommendation system"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = ">=1.26.0"
pandas = ">=2.1.0"
scikit-learn = ">=1.3.0"
fastapi = ">=0.110.0"
uvicorn = {extras = ["standard"], version = ">=0.29.0"}
python-multipart = ">=0.0.9"
pydantic = ">=2.6.0"
pydantic-settings = ">=2.2.0"
pymongo = ">=4.6.0"
redis = ">=5.0.0"
structlog = ">=24.1.0"
python-dotenv = ">=1.0.0"
requests = ">=2.31.0"
streamlit = ">=1.32.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
httpx = ">=0.27.0"
ruff = ">=0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["backend/tests", "model/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["backend", "model"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70